kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v0-ingress
  labels:
    app.kubernetes.io/name: v0-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

    # --- SSE / Streaming ---
    nginx.ingress.kubernetes.io/proxy-buffering: "off"         # critical for SSE
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"

    # --- Keep connection alive ---
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "600"
    nginx.ingress.kubernetes.io/keep-alive: "600"
    nginx.ingress.kubernetes.io/keep-alive-requests: "10000"

  
spec:
  ingressClassName: nginx
  rules:
   - host: "localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/api/sandbox"
        backend:
          service:
            name: sandbox-server-service
            port: 
              number: 80
              
   - host: "localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/api/auth"
        backend:
          service:
            name: auth-service
            port: 
              number: 80

   - host: "localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/api/ai"
        backend:
          service:
            name: ai-service
            port: 
              number: 80

   - host: "*.preview.localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80

   - host: "*.agent.localhost"
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: router-service
            port:
              number: 80
